--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="@dimen/horizontal_margin"
+    android:layout_margin="@dimen/app_margin"
     style="@style/settingsButtons"
     android:layout_height="wrap_content">
 
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toEndOf="@id/contact_photo"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <EditText
+    <TextView
         android:id="@+id/contact_status"
         style="@style/smallText"
         tools:text="в сети"
