--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     <style name="settingsButtons">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">@dimen/vertical_margin</item>
+        <item name="android:layout_marginTop">@dimen/app_small_margin</item>
         <item name="android:clickable">true</item>
         <item name="android:background">@drawable/ripple_effect</item>
         <item name="android:focusable">true</item>
@@ -44,7 +44,7 @@
     <style name="normalText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
         <item name="android:textSize">@dimen/normalText</item>
         <item name="android:textColor">@color/colorBlack</item>
     </style>
@@ -52,7 +52,7 @@
     <style name="smallText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
         <item name="android:textSize">@dimen/smallText</item>
         <item name="android:textColor">@color/colorGray</item>
     </style>
@@ -61,9 +61,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/colorGray</item>
-        <item name="android:layout_marginStart">@dimen/horizontal_margin</item>
-        <item name="android:layout_marginEnd">@dimen/horizontal_margin</item>
-        <item name="android:layout_marginTop">@dimen/vertical_margin</item>
+        <item name="android:layout_marginStart">@dimen/app_margin</item>
+        <item name="android:layout_marginEnd">@dimen/app_margin</item>
+        <item name="android:layout_marginTop">@dimen/app_small_margin</item>
     </style>
 
     <style name="mainToolbar">
@@ -76,7 +76,7 @@
     <style name="editText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/horizontal_margin</item>
+        <item name="android:layout_margin">@dimen/app_margin</item>
         <item name="android:padding">@dimen/appPadding</item>
         <item name="android:textColorHint">@color/colorGray</item>
         <item name="android:textColor">@color/colorBlack</item>
